infrastructure/yaook/gateway/httproute-octavia.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-octavia
  namespace: yaook
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "octavia.rpcu.vpn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: octavia-api
          port: 9877
