infrastructure/yaook/gateway/tlsroute-cinder.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: tlsroute-cinder
spec:
  parentRefs:
    - name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough
  hostnames:
    - "cinder.rpcu.vpn"
  rules:
    - backendRefs:
        - name: cinder-api
          port: 8777
