infrastructure/yaook/gateway/tlsroute-designate.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: tlsroute-designate
  namespace: yaook
spec:
  parentRefs:
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough-designate # Target the new TLS passthrough listener
  hostnames:
    - "designate.rpcu.vpn"
  rules:
    - backendRefs:
        - name: designate-api
          port: 32443
