infrastructure/yaook/gateway/tlsroute-glance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-glance
  namespace: yaook
spec:
  parentRefs:
    - name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough
  hostnames:
    - "glance.rpcu.vpn"
  rules:
    - backendRefs:
        - name: glance-api
          port: 9293
