infrastructure/yaook/gateway/tlsroute-keystone.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: tlsroute-keystone
  namespace: yaook
spec:
  parentRefs:
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough-keystone # Target the new TLS passthrough listener
  hostnames:
    - "keystone.rpcu.vpn"
  rules:
    - backendRefs:
        - name: keystone
          port: 5001
