infrastructure/yaook/gateway/tlsroute-neutron.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-neutron
  namespace: yaook
spec:
  parentRefs:
    - name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough
  hostnames:
    - "neutron.rpcu.vpn"
  rules:
    - backendRefs:
        - name: neutron-api
          port: 9697
