infrastructure/yaook/gateway/tlsroute-nova.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-nova
spec:
  parentRefs:
    - name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough
  hostnames:
    - "nova.rpcu.vpn"
  rules:
    - backendRefs:
        - name: nova-api
          port: 8775
