infrastructure/yaook/gateway/tlsroute-vnc.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: tlsroute-vnc
spec:
  parentRefs:
    - name: yaook-passthrough-listeners
      namespace: yaook
      sectionName: yaook-passthrough
  hostnames:
    - "vnc.rpcu.vpn"
  rules:
    - backendRefs:
        - name: vnc
          port: 6080
